force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employment_Authorization_Type__c</fullName>
        <label>Employment Authorization Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Authorization_Y_N__c</fullName>
        <label>Employment Authorization (Y/N)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Renewal_Date__c</fullName>
        <label>Expiry/Renewal Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greenhouse_Application_Ids__c</fullName>
        <label>Greenhouse Application Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Greenhouse_io_ID__c</fullName>
        <label>Greenhouse.io ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <label>Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Photo_Url__c</fullName>
        <label>Photo Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Recruiter)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requires_Sponsorship__c</fullName>
        <label>Requires Sponsorship?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_with_Greenhouse_io__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Greenhouse.io</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>Ruby</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>All_Contact</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>All Contact</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Candidate</fullName>
        <active>true</active>
        <label>Candidate</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>